# scaletrain

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/scaletrain/configs/: ci_config.yaml  train_config.yaml
src/scaletrain/data/: __init__.py  datamodule.py
src/scaletrain/inference/: api.py
src/scaletrain/models/: __init__.py  cnn.py
src/scaletrain/tracking/: __init__.py  mlflow_logger.py
src/scaletrain/training/: __init__.py  train.py  trainer.py
