[project]
name = "scaletrain"
version = "0.1.0"
description = "Distributed ML training and inference system"
authors = [
    { name = "Aarav Shah", email = "ashah262@asu.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = ["torch (>=2.10.0,<3.0.0)", "torchvision (>=0.25.0,<0.26.0)", "torchaudio (>=2.10.0,<3.0.0)", "mlflow (>=3.10.1,<4.0.0)", "pyyaml (>=6.0.3,<7.0.0)", "typer (>=0.24.1,<0.25.0)", "rich (>=14.3.3,<15.0.0)", "python-dotenv (>=1.2.2,<2.0.0)"]

[tool.poetry]
packages = [{ include = "scaletrain", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
