[project]
name = "scaletrain"
version = "0.1.0"
description = "Distributed ML training and inference system"
authors = [
    { name = "Aarav Shah", email = "ashah262@asu.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.5.0,<3.0.0",
    "torchvision>=0.20.0,<1.0.0",
    "mlflow>=2.15.0,<4.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "typer>=0.12.0,<2.0.0",
    "rich>=13.7.0,<15.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
]

[project.scripts]
scaletrain = "scaletrain.training.train:app"

[tool.poetry]
packages = [{ include = "scaletrain", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<11.0.0",
    "black>=24.0.0,<27.0.0",
    "isort>=5.13.0,<7.0.0",
]
